--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </br>
         <h2 style="text-align: center;">Form Validasi Pembelajaran Tatap Muka</h2>
         <h2 style="text-align: center;">Mahasiswa FTEIC</h2>
-        <form name="formValidasi" onsubmit="return validateForm()" class="pt-2">
+        <form autocomplete="off" name="formValidasi" onsubmit="return validateForm()" class="pt-2">
             <div class="form-group">
                 <label class="font-weight-bold">Nama</label>
                 <input type="text" name="nama" placeholder="Nama lengkap" class="form-control" maxlength="50">
